deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: temporaless
  labels:
    app.kubernetes.io/name: temporaless
    app.kubernetes.io/part-of: temporaless
